--- a/lms/src/main/resources/templates/deactivate-course.html
+++ b/lms/src/main/resources/templates/deactivate-course.html
@@ -60,8 +60,8 @@
             <form id="deactivatedCourseForm" th:data-student-id="${course.id}">
                 <div class="mb-3">
                     <label for="performedBy" class="form-label">Performed By</label>
-                    <input type="text" id="performedBy" name="performedBy" class="form-control" placeholder="Admin name"
-                        required>
+                    <input type="text" id="performedBy" name="performedBy" class="form-control" th:value="${performedBy}"
+                        readonly>
                 </div>
 
                 <div class="mb-3">
